--- a/faq.mdx
+++ b/faq.mdx
@@ -54,7 +54,7 @@ El registro de subsanación de F5 **es un registro independiente del de alta** y
 
 ## ¿Qué debo hacer si no puedo enviar un registro porque Veri*Factu tiene problemas técnicos de conexión?
 
-Si el envío falla por un problema técnico de conexión **con el servidor de Veri*Factu** (timeout, error del servidor o falta de respuesta), **no debes modificar la factura ni generar un nuevo registro**.
+Si el envío falla por un problema técnico de conexión **con el servidor de Veri*Factu** (timeout, error del servidor o falta de respuesta), **no debes modificar la factura ni generar un nuevo registro de la misma factura**.
 
 <Tip>Los fallos de conexión con el servidor de Veri*factu se identifican porque la respuesta de nuestra API incluye el campo `"vf_post_status": "failure"`.</Tip>
 
