--- a/faq.mdx
+++ b/faq.mdx
@@ -15,6 +15,8 @@ En estos casos hay que emitir una [subsanación CON registro previo rechazado](/
 
 Para subsanar un registro que ha sido **_rechazado_** anteriormente por Veri*Factu debemos enviar el campo `correction_key` con el valor `S` y el campo `previous_rejection_key` con el valor `X`. También deberán modificarse los campos que deban ser corregidos.
 
+<Warning>Solo debe utilizarse la subsanación cuando la AEAT haya **_rechazado_** o **_aceptado con errores_** el registro de forma explícita. Ver [valores posible para `vf_record_registration_status`](/openapi-reference/enviar-registro-de-facturación#response-data-vf-record-registration-status-one-of-0).</Warning>
+
 ### Caso de ejemplo
 
 Dado la secuencia de facturas F4 → F5 → F6, donde cada factura se genera encadenada a la anterior. El resultado del envío es:
@@ -38,6 +40,8 @@ En estos casos hay que emitir una subsanación ordinaria, es decir, una [subsana
 
 Para subsanar un registro que ha sido **_aceptado con errores_** por Veri*Factu debemos enviar el campo `correction_key` con el valor `S` y **hay que obviar** el campo `previous_rejection_key`. También deberán modificarse los campos que deban ser corregidos.
 
+<Warning>Solo debe utilizarse la subsanación cuando la AEAT haya **_rechazado_** o **_aceptado con errores_** el registro de forma explícita. Ver [valores posible para `vf_record_registration_status`](/openapi-reference/enviar-registro-de-facturación#response-data-vf-record-registration-status-one-of-0).</Warning>
+
 ### Caso de ejemplo
 
 Dado la secuencia de facturas F4 → F5 → F6, donde cada factura se genera encadenada a la anterior. El resultado del envío es:
@@ -54,11 +58,11 @@ El registro de subsanación de F5 **es un registro independiente del de alta** y
 
 ## ¿Qué debo hacer si no puedo enviar un registro porque Veri*Factu tiene problemas técnicos de conexión?
 
-Si el envío falla por un problema técnico de conexión **con el servidor de Veri*Factu** (timeout, error del servidor o falta de respuesta), **no debes modificar la factura ni generar un nuevo registro de la misma factura**.
+Si el envío falla por un problema técnico de conexión **con el servidor de Veri*Factu** (timeout, error del servidor o falta de respuesta), **no debes modificar la registro ni generar un nuevo registro de alta la misma factura o anulación**.
 
 <Tip>Los fallos de conexión con el servidor de Veri*factu se identifican porque la respuesta de nuestra API incluye el campo `"vf_post_status": "failure"`.</Tip>
 
-En estos casos debes **reenviar el mismo registro de facturación** haciendo uso de nuestro [endpoint de reenvío de registros de facturación](openapi-reference/reenviar-registro-de-facturación), que envía de nuevo el registro sin regeneración del mismo, manteniendo la huella y el encadenamiento originales.
+En estos casos debes **reenviar el mismo registro de facturación (ya sea alta o anulación)** haciendo uso de nuestro [endpoint de reenvío de registros de facturación](openapi-reference/reenviar-registro-de-facturación), que envía de nuevo el registro sin regeneración del mismo, manteniendo la huella y el encadenamiento originales.
 
 <Warning>Solo debe utilizarse la subsanación cuando la AEAT haya **_rechazado_** o **_aceptado con errores_** el registro de forma explícita. Ver [valores posible para `vf_record_registration_status`](/openapi-reference/enviar-registro-de-facturación#response-data-vf-record-registration-status-one-of-0).</Warning>
 
