--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2026-01-29" description="v1.1.9">
+  - Nuevo endpoint para [subir documentos de autorización e identidad](/openapi-reference/subir-documentos-de-autorización) de empresas cliente. Este endpoint permite a los intermediarios que no usan su propio certificado digital subir documentos de autorización firmados y documentos de identidad del representante legal.
+</Update>
+
 <Update label="2025-12-18" description="v1.1.8">
   - Se ha añadido un nuevo endpoint para [reenviar facturas](openapi-reference/reenviar-registro-de-facturación). Este endpoint es útil para registros que fallaron **por un problema técnico de conexión** (timeout, error del servidor o falta de respuesta) en el envío inicial. Se puede leer más al respecto en [nuestra FAQ](/faq#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-porque-veri-factu-tiene-problemas-técnicos-de-conexión).
   - Las respuestas de los registros de facturación incluyen el campo `vf_response_body` con la respuesta devuelta por Veri*factu.
